--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-Flask==2.0.1
+Flask==2.3.3
+Werkzeug==2.3.7
 Flask-SQLAlchemy==2.5.1
-Flask-Migrate==2.5.1
+Flask-Migrate==4.0.5
 psycopg2-binary==2.9.1
 gunicorn==20.1.0
 python-dotenv==0.19.0
